--- a/style.css
+++ b/style.css
@@ -1,4 +1,22 @@
 body {
-    background-image: url("alien.gif");
     text-align: center;
+    margin: 0;
+    font-family: sans-serif;
+    background-image: url("alien.gif");
+}
+
+header {
+    background: black;
+    color: white;
+}
+
+header>h1 {
+    font-size: 48px;
+    padding: 1em;
+    margin: 0;
+}
+
+#content {
+    padding-top: 30px;
+    height: 100%;
 }
