--- a/style.css
+++ b/style.css
@@ -1,22 +1,26 @@
 body {
     text-align: center;
     margin: 0;
-    font-family: sans-serif;
+    font-family: "Comic Neue", "Comic Sans MS", sans-serif;
     background-image: url("alien.gif");
 }
 
 header {
-    background: black;
-    color: white;
+    background: pink;
+    color: black;
+    border-radius: 30px;
+    box-shadow: 20px 20px cyan;
+    display: inline-block;
+    margin: 50px;
 }
 
 header>h1 {
-    font-size: 48px;
+    font-size: 52px;
     padding: 1em;
-    margin: 0;
+    margin: auto;
 }
 
-#content {
-    padding-top: 30px;
-    height: 100%;
+@font-face {
+    font-family: "Comic Neue";
+    src: url("/ComicNeue-Regular.otf");
 }
