--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
     text-align: center;
-    margin: 0;
     font-family: "Comic Neue", "Comic Sans MS", sans-serif;
     background-image: url("alien.gif");
 }
@@ -11,13 +10,20 @@ header {
     border-radius: 30px;
     box-shadow: 20px 20px cyan;
     display: inline-block;
-    margin: 50px;
+    margin: 25px;
 }
 
-header>h1 {
+h1 {
     font-size: 52px;
     padding: 1em;
-    margin: auto;
+}
+
+main {
+    margin: 30px 0;
+}
+
+#yeti {
+    max-width: 100vw;
 }
 
 @font-face {
