Removed images, added placeholder text

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     text-align: center;
     font-family: "Comic Neue", "Comic Sans MS", sans-serif;
-    background-image: url("alien.gif");
+/*    background-image: url("alien.gif");*/
 }
 
 header {
