--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
     text-align: center;
     font-family: "Comic Neue", "Comic Sans MS", sans-serif;
-/*    background-image: url("alien.gif");*/
 }
 
 header {
@@ -23,8 +22,9 @@ main {
     margin: 30px 0;
 }
 
-#yeti {
-    max-width: 100vw;
+#new-design {
+    width: 600px;
+    outline: solid black 3px;
 }
 
 @font-face {
